parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PRED

Grammar

Rule 0     S' -> exp
Rule 1     exp -> cmds
Rule 2     exp -> type
Rule 3     exp -> comparators
Rule 4     exp -> csvfile
Rule 5     exp -> pred
Rule 6     cmds -> cmd mcmd
Rule 7     mcmd -> <empty>
Rule 8     mcmd -> cmd mcmd
Rule 9     cmd -> CHECK type
Rule 10    cmd -> CHECKFROM name_type
Rule 11    cmd -> ADD type
Rule 12    cmd -> DELETE type
Rule 13    cmd -> FILTER comparators
Rule 14    cmd -> CSV csvfile
Rule 15    cmd -> DISPLAY content
Rule 16    cmd -> PRINT STRING
Rule 17    cmd -> COUNT compnextelement
Rule 18    cmd -> SELECT variables
Rule 19    cmd -> REFERENCE element
Rule 20    cmd -> RENAME args
Rule 21    content -> type
Rule 22    content -> <empty>
Rule 23    comparators -> comparator conjcomparator
Rule 24    comparator -> variable compnext
Rule 25    comparator -> element compnext
Rule 26    compnext -> symbol variable
Rule 27    compnext -> symbol element
Rule 28    compnextelement -> symbol element
Rule 29    conjcomparator -> AND comparator conjcomparator
Rule 30    conjcomparator -> <empty>
Rule 31    symbol -> EQUAL EQUAL
Rule 32    symbol -> INF EQUAL
Rule 33    symbol -> SUP EQUAL
Rule 34    symbol -> INF
Rule 35    symbol -> SUP
Rule 36    symbol -> STRINGEQUAL
Rule 37    symbol -> STRINGNOTEQUAL
Rule 38    symbol -> STRINGCONTAINS
Rule 39    type -> element
Rule 40    type -> variable
Rule 41    type -> fact
Rule 42    type -> set
Rule 43    variable -> VAR
Rule 44    element -> NUMBER
Rule 45    element -> NAME
Rule 46    element -> STRING
Rule 47    fact -> element element element
Rule 48    set -> set_fact conjset
Rule 49    set_fact -> set_fact_classic
Rule 50    set_fact -> set_fact_with_not
Rule 51    set_fact -> fact
Rule 52    set_fact_classic -> set_element set_element set_element
Rule 53    set_fact_classic -> element element VAR
Rule 54    set_fact_with_not -> NOT set_element set_element set_element
Rule 55    set_fact_with_not -> set_element NOT set_element set_element
Rule 56    set_fact_with_not -> set_element set_element NOT set_element
Rule 57    set_fact_with_not -> set_element set_element set_element NOT
Rule 58    set_fact_with_not -> element element set_element NOT
Rule 59    set_fact_with_not -> element element NOT set_element
Rule 60    set_element -> element
Rule 61    set_element -> VAR
Rule 62    conjset -> <empty>
Rule 63    conjset -> AND set_fact conjset
Rule 64    csvfile -> NAME DOT CSV
Rule 65    pred -> NAME DOT PREDEXT
Rule 66    name_type -> NAME type
Rule 67    variables -> VAR
Rule 68    variables -> VAR morevariables
Rule 69    morevariables -> VAR morevariables
Rule 70    morevariables -> VAR
Rule 71    args -> element
Rule 72    args -> element moreargs
Rule 73    moreargs -> element moreargs
Rule 74    moreargs -> element

Terminals, with rules where they appear

ADD                  : 11
AND                  : 29 63
CHECK                : 9
CHECKFROM            : 10
COUNT                : 17
CSV                  : 14 64
DELETE               : 12
DISPLAY              : 15
DOT                  : 64 65
EQUAL                : 31 31 32 33
FILTER               : 13
INF                  : 32 34
NAME                 : 45 64 65 66
NOT                  : 54 55 56 57 58 59
NUMBER               : 44
PRED                 : 
PREDEXT              : 65
PRINT                : 16
REFERENCE            : 19
RENAME               : 20
SELECT               : 18
STRING               : 16 46
STRINGCONTAINS       : 38
STRINGEQUAL          : 36
STRINGNOTEQUAL       : 37
SUP                  : 33 35
VAR                  : 43 53 61 67 68 69 70
error                : 

Nonterminals, with rules where they appear

args                 : 20
cmd                  : 6 8
cmds                 : 1
comparator           : 23 29
comparators          : 3 13
compnext             : 24 25
compnextelement      : 17
conjcomparator       : 23 29
conjset              : 48 63
content              : 15
csvfile              : 4 14
element              : 19 25 27 28 39 47 47 47 53 53 58 58 59 59 60 71 72 73 74
exp                  : 0
fact                 : 41 51
mcmd                 : 6 8
moreargs             : 72 73
morevariables        : 68 69
name_type            : 10
pred                 : 5
set                  : 42
set_element          : 52 52 52 54 54 54 55 55 55 56 56 56 57 57 57 58 59
set_fact             : 48 63
set_fact_classic     : 49
set_fact_with_not    : 50
symbol               : 26 27 28
type                 : 2 9 11 12 21 66
variable             : 24 26 40
variables            : 18

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . cmds
    (2) exp -> . type
    (3) exp -> . comparators
    (4) exp -> . csvfile
    (5) exp -> . pred
    (6) cmds -> . cmd mcmd
    (39) type -> . element
    (40) type -> . variable
    (41) type -> . fact
    (42) type -> . set
    (23) comparators -> . comparator conjcomparator
    (64) csvfile -> . NAME DOT CSV
    (65) pred -> . NAME DOT PREDEXT
    (9) cmd -> . CHECK type
    (10) cmd -> . CHECKFROM name_type
    (11) cmd -> . ADD type
    (12) cmd -> . DELETE type
    (13) cmd -> . FILTER comparators
    (14) cmd -> . CSV csvfile
    (15) cmd -> . DISPLAY content
    (16) cmd -> . PRINT STRING
    (17) cmd -> . COUNT compnextelement
    (18) cmd -> . SELECT variables
    (19) cmd -> . REFERENCE element
    (20) cmd -> . RENAME args
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (43) variable -> . VAR
    (47) fact -> . element element element
    (48) set -> . set_fact conjset
    (24) comparator -> . variable compnext
    (25) comparator -> . element compnext
    (49) set_fact -> . set_fact_classic
    (50) set_fact -> . set_fact_with_not
    (51) set_fact -> . fact
    (52) set_fact_classic -> . set_element set_element set_element
    (53) set_fact_classic -> . element element VAR
    (54) set_fact_with_not -> . NOT set_element set_element set_element
    (55) set_fact_with_not -> . set_element NOT set_element set_element
    (56) set_fact_with_not -> . set_element set_element NOT set_element
    (57) set_fact_with_not -> . set_element set_element set_element NOT
    (58) set_fact_with_not -> . element element set_element NOT
    (59) set_fact_with_not -> . element element NOT set_element
    (60) set_element -> . element
    (61) set_element -> . VAR

    NAME            shift and go to state 13
    CHECK           shift and go to state 15
    CHECKFROM       shift and go to state 16
    ADD             shift and go to state 17
    DELETE          shift and go to state 18
    FILTER          shift and go to state 19
    CSV             shift and go to state 14
    DISPLAY         shift and go to state 20
    PRINT           shift and go to state 21
    COUNT           shift and go to state 23
    SELECT          shift and go to state 24
    REFERENCE       shift and go to state 25
    RENAME          shift and go to state 26
    NUMBER          shift and go to state 27
    STRING          shift and go to state 22
    VAR             shift and go to state 28
    NOT             shift and go to state 33

    exp                            shift and go to state 1
    cmds                           shift and go to state 2
    type                           shift and go to state 3
    comparators                    shift and go to state 4
    csvfile                        shift and go to state 5
    pred                           shift and go to state 6
    cmd                            shift and go to state 7
    element                        shift and go to state 8
    variable                       shift and go to state 9
    fact                           shift and go to state 10
    set                            shift and go to state 11
    comparator                     shift and go to state 12
    set_fact                       shift and go to state 29
    set_fact_classic               shift and go to state 30
    set_fact_with_not              shift and go to state 31
    set_element                    shift and go to state 32

state 1

    (0) S' -> exp .



state 2

    (1) exp -> cmds .

    $end            reduce using rule 1 (exp -> cmds .)


state 3

    (2) exp -> type .

    $end            reduce using rule 2 (exp -> type .)


state 4

    (3) exp -> comparators .

    $end            reduce using rule 3 (exp -> comparators .)


state 5

    (4) exp -> csvfile .

    $end            reduce using rule 4 (exp -> csvfile .)


state 6

    (5) exp -> pred .

    $end            reduce using rule 5 (exp -> pred .)


state 7

    (6) cmds -> cmd . mcmd
    (7) mcmd -> .
    (8) mcmd -> . cmd mcmd
    (9) cmd -> . CHECK type
    (10) cmd -> . CHECKFROM name_type
    (11) cmd -> . ADD type
    (12) cmd -> . DELETE type
    (13) cmd -> . FILTER comparators
    (14) cmd -> . CSV csvfile
    (15) cmd -> . DISPLAY content
    (16) cmd -> . PRINT STRING
    (17) cmd -> . COUNT compnextelement
    (18) cmd -> . SELECT variables
    (19) cmd -> . REFERENCE element
    (20) cmd -> . RENAME args

    $end            reduce using rule 7 (mcmd -> .)
    CHECK           shift and go to state 15
    CHECKFROM       shift and go to state 16
    ADD             shift and go to state 17
    DELETE          shift and go to state 18
    FILTER          shift and go to state 19
    CSV             shift and go to state 14
    DISPLAY         shift and go to state 20
    PRINT           shift and go to state 21
    COUNT           shift and go to state 23
    SELECT          shift and go to state 24
    REFERENCE       shift and go to state 25
    RENAME          shift and go to state 26

    cmd                            shift and go to state 34
    mcmd                           shift and go to state 35

state 8

    (39) type -> element .
    (47) fact -> element . element element
    (25) comparator -> element . compnext
    (53) set_fact_classic -> element . element VAR
    (58) set_fact_with_not -> element . element set_element NOT
    (59) set_fact_with_not -> element . element NOT set_element
    (60) set_element -> element .
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (26) compnext -> . symbol variable
    (27) compnext -> . symbol element
    (31) symbol -> . EQUAL EQUAL
    (32) symbol -> . INF EQUAL
    (33) symbol -> . SUP EQUAL
    (34) symbol -> . INF
    (35) symbol -> . SUP
    (36) symbol -> . STRINGEQUAL
    (37) symbol -> . STRINGNOTEQUAL
    (38) symbol -> . STRINGCONTAINS

  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
    $end            reduce using rule 39 (type -> element .)
    NOT             reduce using rule 60 (set_element -> element .)
    VAR             reduce using rule 60 (set_element -> element .)
    NUMBER          shift and go to state 27
    NAME            shift and go to state 38
    STRING          shift and go to state 22
    EQUAL           shift and go to state 40
    INF             shift and go to state 41
    SUP             shift and go to state 42
    STRINGEQUAL     shift and go to state 43
    STRINGNOTEQUAL  shift and go to state 44
    STRINGCONTAINS  shift and go to state 45

  ! NUMBER          [ reduce using rule 60 (set_element -> element .) ]
  ! NAME            [ reduce using rule 60 (set_element -> element .) ]
  ! STRING          [ reduce using rule 60 (set_element -> element .) ]

    element                        shift and go to state 36
    compnext                       shift and go to state 37
    symbol                         shift and go to state 39

state 9

    (40) type -> variable .
    (24) comparator -> variable . compnext
    (26) compnext -> . symbol variable
    (27) compnext -> . symbol element
    (31) symbol -> . EQUAL EQUAL
    (32) symbol -> . INF EQUAL
    (33) symbol -> . SUP EQUAL
    (34) symbol -> . INF
    (35) symbol -> . SUP
    (36) symbol -> . STRINGEQUAL
    (37) symbol -> . STRINGNOTEQUAL
    (38) symbol -> . STRINGCONTAINS

    $end            reduce using rule 40 (type -> variable .)
    EQUAL           shift and go to state 40
    INF             shift and go to state 41
    SUP             shift and go to state 42
    STRINGEQUAL     shift and go to state 43
    STRINGNOTEQUAL  shift and go to state 44
    STRINGCONTAINS  shift and go to state 45

    compnext                       shift and go to state 46
    symbol                         shift and go to state 39

state 10

    (41) type -> fact .
    (51) set_fact -> fact .

  ! reduce/reduce conflict for $end resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for CHECK resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for CHECKFROM resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for ADD resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for DELETE resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for FILTER resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for CSV resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for DISPLAY resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for PRINT resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for COUNT resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for SELECT resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for REFERENCE resolved using rule 41 (type -> fact .)
  ! reduce/reduce conflict for RENAME resolved using rule 41 (type -> fact .)
    $end            reduce using rule 41 (type -> fact .)
    CHECK           reduce using rule 41 (type -> fact .)
    CHECKFROM       reduce using rule 41 (type -> fact .)
    ADD             reduce using rule 41 (type -> fact .)
    DELETE          reduce using rule 41 (type -> fact .)
    FILTER          reduce using rule 41 (type -> fact .)
    CSV             reduce using rule 41 (type -> fact .)
    DISPLAY         reduce using rule 41 (type -> fact .)
    PRINT           reduce using rule 41 (type -> fact .)
    COUNT           reduce using rule 41 (type -> fact .)
    SELECT          reduce using rule 41 (type -> fact .)
    REFERENCE       reduce using rule 41 (type -> fact .)
    RENAME          reduce using rule 41 (type -> fact .)
    AND             reduce using rule 51 (set_fact -> fact .)

  ! $end            [ reduce using rule 51 (set_fact -> fact .) ]
  ! CHECK           [ reduce using rule 51 (set_fact -> fact .) ]
  ! CHECKFROM       [ reduce using rule 51 (set_fact -> fact .) ]
  ! ADD             [ reduce using rule 51 (set_fact -> fact .) ]
  ! DELETE          [ reduce using rule 51 (set_fact -> fact .) ]
  ! FILTER          [ reduce using rule 51 (set_fact -> fact .) ]
  ! CSV             [ reduce using rule 51 (set_fact -> fact .) ]
  ! DISPLAY         [ reduce using rule 51 (set_fact -> fact .) ]
  ! PRINT           [ reduce using rule 51 (set_fact -> fact .) ]
  ! COUNT           [ reduce using rule 51 (set_fact -> fact .) ]
  ! SELECT          [ reduce using rule 51 (set_fact -> fact .) ]
  ! REFERENCE       [ reduce using rule 51 (set_fact -> fact .) ]
  ! RENAME          [ reduce using rule 51 (set_fact -> fact .) ]


state 11

    (42) type -> set .

    $end            reduce using rule 42 (type -> set .)
    CHECK           reduce using rule 42 (type -> set .)
    CHECKFROM       reduce using rule 42 (type -> set .)
    ADD             reduce using rule 42 (type -> set .)
    DELETE          reduce using rule 42 (type -> set .)
    FILTER          reduce using rule 42 (type -> set .)
    CSV             reduce using rule 42 (type -> set .)
    DISPLAY         reduce using rule 42 (type -> set .)
    PRINT           reduce using rule 42 (type -> set .)
    COUNT           reduce using rule 42 (type -> set .)
    SELECT          reduce using rule 42 (type -> set .)
    REFERENCE       reduce using rule 42 (type -> set .)
    RENAME          reduce using rule 42 (type -> set .)


state 12

    (23) comparators -> comparator . conjcomparator
    (29) conjcomparator -> . AND comparator conjcomparator
    (30) conjcomparator -> .

    AND             shift and go to state 48
    $end            reduce using rule 30 (conjcomparator -> .)
    CHECK           reduce using rule 30 (conjcomparator -> .)
    CHECKFROM       reduce using rule 30 (conjcomparator -> .)
    ADD             reduce using rule 30 (conjcomparator -> .)
    DELETE          reduce using rule 30 (conjcomparator -> .)
    FILTER          reduce using rule 30 (conjcomparator -> .)
    CSV             reduce using rule 30 (conjcomparator -> .)
    DISPLAY         reduce using rule 30 (conjcomparator -> .)
    PRINT           reduce using rule 30 (conjcomparator -> .)
    COUNT           reduce using rule 30 (conjcomparator -> .)
    SELECT          reduce using rule 30 (conjcomparator -> .)
    REFERENCE       reduce using rule 30 (conjcomparator -> .)
    RENAME          reduce using rule 30 (conjcomparator -> .)

    conjcomparator                 shift and go to state 47

state 13

    (64) csvfile -> NAME . DOT CSV
    (65) pred -> NAME . DOT PREDEXT
    (45) element -> NAME .

    DOT             shift and go to state 49
    NUMBER          reduce using rule 45 (element -> NAME .)
    NAME            reduce using rule 45 (element -> NAME .)
    STRING          reduce using rule 45 (element -> NAME .)
    EQUAL           reduce using rule 45 (element -> NAME .)
    INF             reduce using rule 45 (element -> NAME .)
    SUP             reduce using rule 45 (element -> NAME .)
    STRINGEQUAL     reduce using rule 45 (element -> NAME .)
    STRINGNOTEQUAL  reduce using rule 45 (element -> NAME .)
    STRINGCONTAINS  reduce using rule 45 (element -> NAME .)
    $end            reduce using rule 45 (element -> NAME .)
    NOT             reduce using rule 45 (element -> NAME .)
    VAR             reduce using rule 45 (element -> NAME .)


state 14

    (14) cmd -> CSV . csvfile
    (64) csvfile -> . NAME DOT CSV

    NAME            shift and go to state 51

    csvfile                        shift and go to state 50

state 15

    (9) cmd -> CHECK . type
    (39) type -> . element
    (40) type -> . variable
    (41) type -> . fact
    (42) type -> . set
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (43) variable -> . VAR
    (47) fact -> . element element element
    (48) set -> . set_fact conjset
    (49) set_fact -> . set_fact_classic
    (50) set_fact -> . set_fact_with_not
    (51) set_fact -> . fact
    (52) set_fact_classic -> . set_element set_element set_element
    (53) set_fact_classic -> . element element VAR
    (54) set_fact_with_not -> . NOT set_element set_element set_element
    (55) set_fact_with_not -> . set_element NOT set_element set_element
    (56) set_fact_with_not -> . set_element set_element NOT set_element
    (57) set_fact_with_not -> . set_element set_element set_element NOT
    (58) set_fact_with_not -> . element element set_element NOT
    (59) set_fact_with_not -> . element element NOT set_element
    (60) set_element -> . element
    (61) set_element -> . VAR

    NUMBER          shift and go to state 27
    NAME            shift and go to state 38
    STRING          shift and go to state 22
    VAR             shift and go to state 28
    NOT             shift and go to state 33

    type                           shift and go to state 52
    element                        shift and go to state 53
    variable                       shift and go to state 54
    fact                           shift and go to state 10
    set                            shift and go to state 11
    set_fact                       shift and go to state 29
    set_fact_classic               shift and go to state 30
    set_fact_with_not              shift and go to state 31
    set_element                    shift and go to state 32

state 16

    (10) cmd -> CHECKFROM . name_type
    (66) name_type -> . NAME type

    NAME            shift and go to state 56

    name_type                      shift and go to state 55

state 17

    (11) cmd -> ADD . type
    (39) type -> . element
    (40) type -> . variable
    (41) type -> . fact
    (42) type -> . set
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (43) variable -> . VAR
    (47) fact -> . element element element
    (48) set -> . set_fact conjset
    (49) set_fact -> . set_fact_classic
    (50) set_fact -> . set_fact_with_not
    (51) set_fact -> . fact
    (52) set_fact_classic -> . set_element set_element set_element
    (53) set_fact_classic -> . element element VAR
    (54) set_fact_with_not -> . NOT set_element set_element set_element
    (55) set_fact_with_not -> . set_element NOT set_element set_element
    (56) set_fact_with_not -> . set_element set_element NOT set_element
    (57) set_fact_with_not -> . set_element set_element set_element NOT
    (58) set_fact_with_not -> . element element set_element NOT
    (59) set_fact_with_not -> . element element NOT set_element
    (60) set_element -> . element
    (61) set_element -> . VAR

    NUMBER          shift and go to state 27
    NAME            shift and go to state 38
    STRING          shift and go to state 22
    VAR             shift and go to state 28
    NOT             shift and go to state 33

    type                           shift and go to state 57
    element                        shift and go to state 53
    variable                       shift and go to state 54
    fact                           shift and go to state 10
    set                            shift and go to state 11
    set_fact                       shift and go to state 29
    set_fact_classic               shift and go to state 30
    set_fact_with_not              shift and go to state 31
    set_element                    shift and go to state 32

state 18

    (12) cmd -> DELETE . type
    (39) type -> . element
    (40) type -> . variable
    (41) type -> . fact
    (42) type -> . set
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (43) variable -> . VAR
    (47) fact -> . element element element
    (48) set -> . set_fact conjset
    (49) set_fact -> . set_fact_classic
    (50) set_fact -> . set_fact_with_not
    (51) set_fact -> . fact
    (52) set_fact_classic -> . set_element set_element set_element
    (53) set_fact_classic -> . element element VAR
    (54) set_fact_with_not -> . NOT set_element set_element set_element
    (55) set_fact_with_not -> . set_element NOT set_element set_element
    (56) set_fact_with_not -> . set_element set_element NOT set_element
    (57) set_fact_with_not -> . set_element set_element set_element NOT
    (58) set_fact_with_not -> . element element set_element NOT
    (59) set_fact_with_not -> . element element NOT set_element
    (60) set_element -> . element
    (61) set_element -> . VAR

    NUMBER          shift and go to state 27
    NAME            shift and go to state 38
    STRING          shift and go to state 22
    VAR             shift and go to state 28
    NOT             shift and go to state 33

    type                           shift and go to state 58
    element                        shift and go to state 53
    variable                       shift and go to state 54
    fact                           shift and go to state 10
    set                            shift and go to state 11
    set_fact                       shift and go to state 29
    set_fact_classic               shift and go to state 30
    set_fact_with_not              shift and go to state 31
    set_element                    shift and go to state 32

state 19

    (13) cmd -> FILTER . comparators
    (23) comparators -> . comparator conjcomparator
    (24) comparator -> . variable compnext
    (25) comparator -> . element compnext
    (43) variable -> . VAR
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING

    VAR             shift and go to state 62
    NUMBER          shift and go to state 27
    NAME            shift and go to state 38
    STRING          shift and go to state 22

    comparators                    shift and go to state 59
    comparator                     shift and go to state 12
    variable                       shift and go to state 60
    element                        shift and go to state 61

state 20

    (15) cmd -> DISPLAY . content
    (21) content -> . type
    (22) content -> .
    (39) type -> . element
    (40) type -> . variable
    (41) type -> . fact
    (42) type -> . set
    (44) element -> . NUMBER
    (45) element -> . NAME
    (46) element -> . STRING
    (43) variable -> . VAR
    (47) fact -> . element element element
    (48) set -> . set_fact conjset
    (49) set_fact -> . set_fact_classic
    (50) set_fact -> . set_fact_with_not
    (51) set_fact -> . fact
    (52) set_fact_classic -> . set_element set_element set_element
    (53) set_fact_classic -> . element element VAR
    (54) set_fact_with_not -> . NOT set_element set_element set_element
    (55) set_fact_with_not -> . set_element NOT set_element set_element
    (56) set_fact_with_not -> . set_element set_element NOT set_element
    (57) set_fact_with_not -> . set_element set_element set_element NOT
    (58) set_fact_with_not -> . element element set_element NOT
    (59) set_fact_with_not -> . element element NOT set_element
    (60) set_element -> . element
    (61) set_element -> . VAR
